--- a/src/server/2V/inicio.pug
+++ b/src/server/2V/inicio.pug
@@ -5,7 +5,7 @@ html
 
   body
     div#inicio cargando contenido .....
-    canvas#canvas
+    canvas#myCanvas
     div#toastFactory
     div#modalFactory
 
